--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root" style="text-align: center"></div>
+    <div id="root"></div>
     <script type="text/babel" src="script.js"></script>
   </body>
 </html>
